Add staff personas, portraits, and AI attribution to footer

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <nav>
         <ul>
           <!-- <li><a href="index.html">Home</a></li> -->
-          <li><a href="staff.html">Staff</a></li>
-          <li><a href="collections.html">Collections</a></li>
+          <li><a href="html/staff.html">Staff</a></li>
+          <li><a href="html/collections.html">Collections</a></li>
         </ul>
       </nav>
     </header>
