Update text and alignment and spacing

--- a/index.html
+++ b/index.html
@@ -42,20 +42,22 @@
 
     <!-- ===== Hero / Mission Section ===== -->
     <section id="intro">
-      <h2>Bringing you the most dynamic in Cultural Interpretations</h2>
+      <h2>Bringing Light to Forgotten Stories</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error odit in
-        nemo ullam, quisquam harum! Assumenda voluptate odio ut cum earum nam
-        inventore esse blanditiis natus, corrupti quae possimus. Assumenda?
+        Step inside a museum dedicated to the unseen and the unremembered —
+        where lost negatives, forgotten rolls of film, and unlabeled prints are
+        given new life. Each recovered image reveals fragments of time once
+        thought to have vanished.
       </p>
       <p>
-        Accepting volunteers to <a href="#">write</a> Lorem ipsum dolor sit,
-        amet consectetur adipisicing elit. Vitae hic cum tempora fugiat
-        blanditiis, ut illo. Animi ipsam nobis adipisci saepe perferendis rem
-        dolore aliquam quos rerum! Nobis, perspiciatis sit!
+        We collect, restore, and recontextualize the photographs left behind —
+        honoring the unknown photographers whose vision was nearly erased by
+        history.
       </p>
       <p>
-        Check out our volunteer programs to see how you can become involved.
+        Join us as we piece together stories from light, shadow, and silence.
+        <a href="#">Volunteer</a> to help with digitization, research, and
+        exhibition preparation.
       </p>
     </section>
 
@@ -65,36 +67,74 @@
         <h2>Programs and Events</h2>
         <div class="panel-container">
           <article class="panel">
-            <h3>Grand Opening!</h3>
+            <h3>Grand Opening Exhibition</h3>
             <p>
-              <a href="#">Reflections of the Past:</a>
-              <em>The Colours of Time</em> and Relics of the Forgotten Ones.
-            </p>
-            <h4>Exhibitions</h4>
-            <p>Master Calendar of Exhibitions, Opening, Classes, and Events.</p>
-          </article>
-
-          <article class="panel">
-            <h3>Seasonal Programs</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto
-              nulla, eligendi dolor rerum id unde fugiat quis qui quidem cum,
-              voluptatum mollitia adipisci sed est ipsum perferendis quae.
-              Doloremque, sint!
+              <strong>Reflections of the Past:</strong>
+              <em>The Colours of Time and Memory</em>
             </p>
             <p>
-              <strong>Looking Ahead:</strong> See what's going on and how you
-              and your group can get involved.
+              Explore rediscovered archives spanning a century of lost
+              photography — from unclaimed film rolls to attic negatives
+              restored through digital and chemical processes.
             </p>
-          </article>
-
-          <article class="panel">
-            <h3>Community Center</h3>
+            <p><strong>Exhibits include:</strong></p>
             <ul>
-              <li>Volunteer Programming</li>
-              <li>Community Outreach</li>
-              <li>Education: Presentations, Classes, and Workshops</li>
-              <li>Visitor info, mission highlights, and recent discoveries.</li>
+              <li>
+                <em>The Maier Collection</em>: Street life recovered from
+                undeveloped film
+              </li>
+              <li>
+                <em>Found in Dust</em>: Images salvaged from estate sales and
+                forgotten basements
+              </li>
+              <li>
+                <em>Echo Portraits</em>: Anonymous faces matched to letters,
+                postcards, and fragments of identity
+              </li>
+            </ul>
+          </article>
+
+          <article class="panel">
+            <h3>Seasonal Series: Shadows Reimagined</h3>
+            <p>
+              Quarterly exhibitions exploring different themes of memory and
+              loss in photography.
+            </p>
+            <ul>
+              <li>
+                <strong>Winter 2025:</strong> <em>The Absent Frame</em> — what’s
+                left unseen beyond the edge of the photo
+              </li>
+              <li>
+                <strong>Spring 2026:</strong> <em>Ghost Light</em> — the play of
+                time, exposure, and fading memory
+              </li>
+              <li>
+                <strong>Summer 2026:</strong> <em>Afterimage</em> — rediscovered
+                Kodachrome, 1940–1980
+              </li>
+            </ul>
+          </article>
+
+          <article class="panel">
+            <h3>Community and Research Center</h3>
+            <p>
+              A space for collaboration between photographers, historians, and
+              the public.
+            </p>
+            <ul>
+              <li>
+                <strong>Workshops:</strong> Film preservation, scanning,
+                restoration, and metadata cataloging
+              </li>
+              <li>
+                <strong>Talks:</strong> Conversations with archivists and visual
+                anthropologists
+              </li>
+              <li>
+                <strong>Projects:</strong> Help identify anonymous photographers
+                through open-source crowdsourcing
+              </li>
             </ul>
           </article>
         </div>
