Updated folder structure, added Staff/Collections images, and refined CSS/HTML

--- a/html/staff.html
+++ b/html/staff.html
@@ -46,7 +46,7 @@
           <!-- Role: Archaeologist -->
           <article class="staff">
             <img
-              src="../images/elara-venn.jpg"
+              src="../images/Staff/elara-venn.jpg"
               alt="Dr. Elara Venn examining film negatives on a light table"
               style="width: 350px; height: auto; border-radius: 8px"
             />
@@ -91,7 +91,7 @@
           <!-- Role: Anthropologist -->
           <article class="staff reverse">
             <img
-              src="../images/rhea-anwar.jpg"
+              src="../images/Staff/rhea-anwar.jpg"
               alt="Dr. Rhea Anwar seated at her desk, surrounded by vintage photographs and handwritten notes, illuminated by warm lamplight as she studies her research materials"
               style="width: 350px; height: auto; border-radius: 8px"
             />
@@ -136,7 +136,7 @@
           <!-- Role: Interpreter -->
           <article class="staff">
             <img
-              src="../images/iole-voss.jpg"
+              src="../images/Staff/iole-voss.jpg"
               alt="Professor Iole Voss standing in a dimly lit lecture space, presenting projected black-and-white photographs as part of a cultural interpretation talk"
               style="width: 350px; height: auto; border-radius: 8px"
             />
