Final Shop page updates and other tweaks

--- a/index.html
+++ b/index.html
@@ -33,113 +33,116 @@
       <h1>Museum of Lost Photographs</h1>
       <nav>
         <ul>
-          <!-- <li><a href="index.html">Home</a></li> -->
           <li><a href="html/staff.html">Staff</a></li>
           <li><a href="html/collections.html">Collections</a></li>
+          <li><a href="html/shop.html">Museum Shop</a></li>
         </ul>
       </nav>
     </header>
 
-    <!-- ===== Hero / Mission Section ===== -->
-    <section id="intro">
-      <h2>Bringing Light to Forgotten Stories</h2>
-      <p>
-        Step inside a museum dedicated to the unseen and the unremembered —
-        where lost negatives, forgotten rolls of film, and unlabeled prints are
-        given new life. Each recovered image reveals fragments of time once
-        thought to have vanished.
-      </p>
-      <p>
-        We collect, restore, and recontextualize the photographs left behind —
-        honoring the unknown photographers whose vision was nearly erased by
-        history.
-      </p>
-      <p>
-        Join us as we piece together stories from light, shadow, and silence.
-        <a href="#">Volunteer</a> to help with digitization, research, and
-        exhibition preparation.
-      </p>
-    </section>
-
-    <!-- ====== Main Content (Three Columns) ====== -->
-    <main>
-      <section id="info-panels">
-        <h2>Programs and Events</h2>
-        <div class="panel-container">
-          <article class="panel">
-            <h3>Grand Opening Exhibition</h3>
-            <p>
-              <strong>Reflections of the Past:</strong>
-              <em>The Colours of Time and Memory</em>
-            </p>
-            <p>
-              Explore rediscovered archives spanning a century of lost
-              photography — from unclaimed film rolls to attic negatives
-              restored through digital and chemical processes.
-            </p>
-            <p><strong>Exhibits include:</strong></p>
-            <ul>
-              <li>
-                <em>The Maier Collection</em>: Street life recovered from
-                undeveloped film
-              </li>
-              <li>
-                <em>Found in Dust</em>: Images salvaged from estate sales and
-                forgotten basements
-              </li>
-              <li>
-                <em>Echo Portraits</em>: Anonymous faces matched to letters,
-                postcards, and fragments of identity
-              </li>
-            </ul>
-          </article>
-
-          <article class="panel">
-            <h3>Seasonal Series: Shadows Reimagined</h3>
-            <p>
-              Quarterly exhibitions exploring different themes of memory and
-              loss in photography.
-            </p>
-            <ul>
-              <li>
-                <strong>Winter 2025:</strong> <em>The Absent Frame</em> — what’s
-                left unseen beyond the edge of the photo
-              </li>
-              <li>
-                <strong>Spring 2026:</strong> <em>Ghost Light</em> — the play of
-                time, exposure, and fading memory
-              </li>
-              <li>
-                <strong>Summer 2026:</strong> <em>Afterimage</em> — rediscovered
-                Kodachrome, 1940–1980
-              </li>
-            </ul>
-          </article>
-
-          <article class="panel">
-            <h3>Community and Research Center</h3>
-            <p>
-              A space for collaboration between photographers, historians, and
-              the public.
-            </p>
-            <ul>
-              <li>
-                <strong>Workshops:</strong> Film preservation, scanning,
-                restoration, and metadata cataloging
-              </li>
-              <li>
-                <strong>Talks:</strong> Conversations with archivists and visual
-                anthropologists
-              </li>
-              <li>
-                <strong>Projects:</strong> Help identify anonymous photographers
-                through open-source crowdsourcing
-              </li>
-            </ul>
-          </article>
-        </div>
+    <!-- ====== Main Content Wrapper ====== -->
+    <div class="page-container">
+      <!-- ===== Hero / Mission Section ===== -->
+      <section id="intro">
+        <h2>Bringing Light to Forgotten Stories</h2>
+        <p>
+          Step inside a museum dedicated to the unseen and the unremembered —
+          where lost negatives, forgotten rolls of film, and unlabeled prints
+          are given new life. Each recovered image reveals fragments of time
+          once thought to have vanished.
+        </p>
+        <p>
+          We collect, restore, and recontextualize the photographs left behind —
+          honoring the unknown photographers whose vision was nearly erased by
+          history.
+        </p>
+        <p>
+          Join us as we piece together stories from light, shadow, and silence.
+          <a href="#">Volunteer</a> to help with digitization, research, and
+          exhibition preparation.
+        </p>
       </section>
-    </main>
+
+      <!-- ====== Main Content (Three Columns) ====== -->
+      <main>
+        <section id="info-panels">
+          <h2>Programs and Events</h2>
+          <div class="panel-container">
+            <article class="panel">
+              <h3>Grand Opening Exhibition</h3>
+              <p>
+                <strong>Reflections of the Past:</strong>
+                <em>The Colours of Time and Memory</em>
+              </p>
+              <p>
+                Explore rediscovered archives spanning a century of lost
+                photography — from unclaimed film rolls to attic negatives
+                restored through digital and chemical processes.
+              </p>
+              <p><strong>Exhibits include:</strong></p>
+              <ul>
+                <li>
+                  <em>The Maier Collection</em>: Street life recovered from
+                  undeveloped film
+                </li>
+                <li>
+                  <em>Found in Dust</em>: Images salvaged from estate sales and
+                  forgotten basements
+                </li>
+                <li>
+                  <em>Echo Portraits</em>: Anonymous faces matched to letters,
+                  postcards, and fragments of identity
+                </li>
+              </ul>
+            </article>
+
+            <article class="panel">
+              <h3>Seasonal Series: Shadows Reimagined</h3>
+              <p>
+                Quarterly exhibitions exploring different themes of memory and
+                loss in photography.
+              </p>
+              <ul>
+                <li>
+                  <strong>Winter 2025:</strong> <em>The Absent Frame</em> —
+                  what’s left unseen beyond the edge of the photo
+                </li>
+                <li>
+                  <strong>Spring 2026:</strong> <em>Ghost Light</em> — the play
+                  of time, exposure, and fading memory
+                </li>
+                <li>
+                  <strong>Summer 2026:</strong> <em>Afterimage</em> —
+                  rediscovered Kodachrome, 1940–1980
+                </li>
+              </ul>
+            </article>
+
+            <article class="panel">
+              <h3>Community and Research Center</h3>
+              <p>
+                A space for collaboration between photographers, historians, and
+                the public.
+              </p>
+              <ul>
+                <li>
+                  <strong>Workshops:</strong> Film preservation, scanning,
+                  restoration, and metadata cataloging
+                </li>
+                <li>
+                  <strong>Talks:</strong> Conversations with archivists and
+                  visual anthropologists
+                </li>
+                <li>
+                  <strong>Projects:</strong> Help identify anonymous
+                  photographers through open-source crowdsourcing
+                </li>
+              </ul>
+            </article>
+          </div>
+        </section>
+      </main>
+    </div>
     <!-- ===== Bottom Field (Footer Area) ===== -->
     <footer>
       <p>This is a fictitious website created purely for academic purposes.</p>
