--- a/html/staff.html
+++ b/html/staff.html
@@ -35,6 +35,7 @@
           <li><a href="../index.html">Home</a></li>
           <li><a href="staff.html">Staff</a></li>
           <li><a href="collections.html">Collections</a></li>
+          <li><a href="shop.html">Museum Shop</a></li>
         </ul>
       </nav>
     </header>
