Add Modal & Histories, adjustments to heading fonts, added image to hope page

--- a/html/shop.html
+++ b/html/shop.html
@@ -23,7 +23,7 @@
         font-family: "Poppins", sans-serif;
         background-color: #f8f8f8;
         color: #222;
-        margin: 0;
+        margin: 12px 0 0;
         padding: 0;
       }
       /* ===== Possible change to background
@@ -41,18 +41,19 @@
         background-color: rgba(47, 58, 69, 0.9);
         color: white;
         text-align: center;
-        padding: 20px 0;
+        padding: 28px 0;
         width: 95%;
-        margin: 0 auto 20px;
+        margin: 0 auto 24px;
         border-radius: 12px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
       }
 
       header h1 {
-        font-size: 2rem;
-        font-weight: 600;
-        margin-bottom: 12px;
-        letter-spacing: 0.5px;
+        font-size: 2.6rem;
+        font-weight: 300;
+        letter-spacing: -0.2px;
+        margin-bottom: 18px;
+        color: #fdfdfd;
       }
 
       /* ===== Navigation ===== */
@@ -71,13 +72,15 @@
         background-color: #007acc;
         padding: 10px 20px;
         border-radius: 6px;
-        font-weight: 600;
+        font-weight: 300;
         transition: all 0.3s ease;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
       }
 
       nav a:hover {
         background-color: #005fa3;
         transform: scale(1.05);
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
       }
 
       /* ===== Museum Shop Hero Section ===== */
