--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
       </nav>
     </header>
 
+    <section class="home-hero">
+      <div class="hero-text">
+        <h1>Museum of Lost Photographs</h1>
+        <p>Discover what time forgot — and what memory restores.</p>
+      </div>
+    </section>
+
     <!-- ====== Main Content Wrapper ====== -->
     <div class="page-container">
       <!-- ===== Hero / Mission Section ===== -->
