Fix modal validation errors and accessibility cleanup

--- a/html/collections.html
+++ b/html/collections.html
@@ -48,8 +48,9 @@
     </div>
 
     <p class="collection-hint">
-  Tip: Click any image to open its Interpretation modal and explore each artifact’s story.
-</p>
+      Tip: Click any image to open its Interpretation modal and explore each
+      artifact’s story.
+    </p>
 
     <!-- ===== Archaeology Section ===== -->
     <section id="archaeology" class="collection-section">
@@ -306,9 +307,7 @@
 
     <!-- Hidden modal content: The Contact Sheet of the Vanished Block -->
     <div class="modal-item" id="modal-text-contactsheet" hidden>
-      <h2 id="modal-title">
-        The Contact Sheet of the Vanished Block — Collection Note
-      </h2>
+      <h2>The Contact Sheet of the Vanished Block — Collection Note</h2>
 
       <p>
         <strong>Material:</strong> Resin-coated photographic paper with red and
@@ -339,7 +338,7 @@
 
     <!-- Hidden modal content: The Letter That Names No One -->
     <div class="modal-item" id="modal-text-letter" hidden>
-      <h2 id="modal-title">The Letter That Names No One — Collection Note</h2>
+      <h2>The Letter That Names No One — Collection Note</h2>
 
       <p>
         <strong>Material:</strong> Lined cellulose paper, blue iron-gall ink,
@@ -372,7 +371,7 @@
     </div>
     <!-- Hidden modal content: The Camera That Saw Twice -->
     <div class="modal-item" id="modal-text-camera" hidden>
-      <h2 id="modal-title">The Camera That Saw Twice — Collection Note</h2>
+      <h2>The Camera That Saw Twice — Collection Note</h2>
 
       <p>
         <strong>Material:</strong> Aluminum alloy body, leatherette wrap,
@@ -635,7 +634,7 @@
     </section>
     <!-- Hidden modal content: The Baseball Mitt - J.L. -->
     <div class="modal-item" id="modal-text-mitt" hidden>
-      <h2 id="modal-title">The Baseball Mitt — “J.L.” — Collection Note</h2>
+      <h2>The Baseball Mitt — “J.L.” — Collection Note</h2>
 
       <p>
         <strong>Material:</strong> Tanned cowhide leather, cotton stitching,
@@ -665,7 +664,7 @@
     </div>
     <!-- Hidden modal content: The Echo Tape -->
     <div class="modal-item" id="modal-text-echotape" hidden>
-      <h2 id="modal-title">The Echo Tape — Collection Note</h2>
+      <h2>The Echo Tape — Collection Note</h2>
 
       <p>
         <strong>Material:</strong> Acetate reel-to-reel magnetic tape, plastic
@@ -694,9 +693,7 @@
     </div>
     <!-- Hidden modal content: The Window Pane with Dust Writing -->
     <div class="modal-item" id="modal-text-windowpane" hidden>
-      <h2 id="modal-title">
-        The Window Pane with Dust Writing — Collection Note
-      </h2>
+      <h2>The Window Pane with Dust Writing — Collection Note</h2>
 
       <p>
         <strong>Material:</strong> Soda-lime window glass fragment with adhered
@@ -804,17 +801,19 @@
           </p>
 
           <h4>Cautionary Note on Interpretation</h4>
-<p class="caution-note">
-  Interpretations are derived from material and contextual analysis within the Vanished Block excavation. 
-  Apparent personal or narrative connections remain speculative and should not be considered definitive without corroborating documentation.
-</p>
+          <p class="caution-note">
+            Interpretations are derived from material and contextual analysis
+            within the Vanished Block excavation. Apparent personal or narrative
+            connections remain speculative and should not be considered
+            definitive without corroborating documentation.
+          </p>
 
           <h4>On Display Courtesy of</h4>
           <p>The Museum of Forgotten Photographs, Education Wing Archives.</p>
-          <hr>
+          <hr />
         </div>
       </article>
-      <!-- ===== The Letter That Names No One ===== -->
+      <!-- ===== HISTORY The Letter That Names No One ===== -->
       <article class="history-item">
         <img
           src="../images/collections/letter_that_names_no_one.jpg"
@@ -839,7 +838,7 @@
             the administrative office of Grant Street Middle School, Chicago.
           </p>
 
-         <h3>What the Experts Believe</h3>
+          <h3>What the Experts Believe</h3>
           <p>
             Recovered from beneath a collapsed desk in the administrative office
             of Grant Street Middle School, this lined sheet—torn, rust-stained,
@@ -884,27 +883,28 @@
           </p>
 
           <h4>Cautionary Note on Interpretation</h4>
-<p class="caution-note">
-  Interpretations are derived from material and contextual analysis within the Vanished Block excavation. 
-  Apparent personal or narrative connections remain speculative and should not be considered definitive without corroborating documentation.
-</p>
-
-           <h4>Comparative Notes</h4>
-          <p>
-           Comparable ink and stock have been
-            identified in Chicago Public School archives, 1958–63, though none
-            preserve such personal tonal evidence.
+          <p class="caution-note">
+            Interpretations are derived from material and contextual analysis
+            within the Vanished Block excavation. Apparent personal or narrative
+            connections remain speculative and should not be considered
+            definitive without corroborating documentation.
           </p>
 
-            <h4>On Display Courtesy Of</h4>
+          <h4>Comparative Notes</h4>
           <p>
-          The Museum of Forgotten
-            Photographs, Office Artifacts Collection.
+            Comparable ink and stock have been identified in Chicago Public
+            School archives, 1958–63, though none preserve such personal tonal
+            evidence.
           </p>
-          <hr>
+
+          <h4>On Display Courtesy Of</h4>
+          <p>
+            The Museum of Forgotten Photographs, Office Artifacts Collection.
+          </p>
+          <hr />
         </div>
       </article>
-      <!-- ===== The Camera That Saw Twice ===== -->
+      <!-- ===== HISTORY The Camera That Saw Twice ===== -->
       <article class="history-item">
         <img
           src="../images/collections/camera_that_saw_twice.jpg"
@@ -975,20 +975,19 @@
             Similar Falcon rangefinders survive in educational archives, though
             none retain film remnants within their chambers.
           </p>
-<h4>Cautionary Note on Interpretation</h4>
-<p class="caution-note">
-  Interpretations are derived from material and contextual analysis within the Vanished Block excavation. 
-  Apparent personal or narrative connections remain speculative and should not be considered definitive without corroborating documentation.
-</p>
-          <h4>On Display Courtesy of</h4
-          <p>
-            The Museum of Forgotten
-            Photographs, Excavation Lab Collection.
+          <h4>Cautionary Note on Interpretation</h4>
+          <p class="caution-note">
+            Interpretations are derived from material and contextual analysis
+            within the Vanished Block excavation. Apparent personal or narrative
+            connections remain speculative and should not be considered
+            definitive without corroborating documentation.
           </p>
-          <hr>
+          <h4>On Display Courtesy of</h4>
+          <p>The Museum of Forgotten Photographs, Excavation Lab Collection.</p>
+          <hr />
         </div>
       </article>
-      <!-- ===== The Baseball Mitt — “J.L.” ===== -->
+      <!-- ===== HISTORY The Baseball Mitt — “J.L.” ===== -->
       <article class="history-item">
         <img
           src="../images/collections/baseball_glove_jl.jpg"
@@ -1054,24 +1053,24 @@
 
           <h4>Comparative Note</h4>
           <p>
-           Youth gloves of this period are rare in
-            situ; most surviving examples are family-kept rather than recovered
-            archaeologically.
+            Youth gloves of this period are rare in situ; most surviving
+            examples are family-kept rather than recovered archaeologically.
           </p>
-<h4>Cautionary Note on Interpretation</h4>
-<p class="caution-note">
-  Interpretations are derived from material and contextual analysis within the Vanished Block excavation. 
-  Apparent personal or narrative connections remain speculative and should not be considered definitive without corroborating documentation.
-</p>
+          <h4>Cautionary Note on Interpretation</h4>
+          <p class="caution-note">
+            Interpretations are derived from material and contextual analysis
+            within the Vanished Block excavation. Apparent personal or narrative
+            connections remain speculative and should not be considered
+            definitive without corroborating documentation.
+          </p>
           <h4>On Display Courtesy of</h4>
           <p>
-            The Museum of Forgotten
-            Photographs, Cultural Memory Collection.
+            The Museum of Forgotten Photographs, Cultural Memory Collection.
           </p>
-          <hr>
+          <hr />
         </div>
       </article>
-      <!-- ===== The Echo Tape ===== -->
+      <!-- ===== HISTORY The Echo Tape ===== -->
       <article class="history-item">
         <img
           src="../images/collections/echo_reel_jll.jpg"
@@ -1096,7 +1095,7 @@
             storage closet adjacent to the photography room.
           </p>
 
-            <h3>What the Experts Believe</h3>
+          <h3>What the Experts Believe</h3>
           <p>
             This warped reel of magnetic tape, labeled “ECHO – J.L.L.” in
             graphite pencil, was recovered from beneath plaster dust and a
@@ -1139,26 +1138,24 @@
 
           <h4>Comparative Note</h4>
           <p>
-            Similar reels from mid-century school
-            programs survive only in fragmentary condition, often without
-            audible content.
+            Similar reels from mid-century school programs survive only in
+            fragmentary condition, often without audible content.
           </p>
 
-     <h4>Cautionary Note on Interpretation</h4>
-<p class="caution-note">
-  Interpretations are derived from material and contextual analysis within the Vanished Block excavation. 
-  Apparent personal or narrative connections remain speculative and should not be considered definitive without corroborating documentation.
-</p>
+          <h4>Cautionary Note on Interpretation</h4>
+          <p class="caution-note">
+            Interpretations are derived from material and contextual analysis
+            within the Vanished Block excavation. Apparent personal or narrative
+            connections remain speculative and should not be considered
+            definitive without corroborating documentation.
+          </p>
 
           <h4>On Display Courtesy of</h4>
-          <p>
-            The Museum of Forgotten
-            Photographs, Audio Memory Archive.
-          </p>
-          <hr>
+          <p>The Museum of Forgotten Photographs, Audio Memory Archive.</p>
+          <hr />
         </div>
       </article>
-      <!-- ===== The Window Pane with Dust Writing ===== -->
+      <!-- ===== HISTORY The Window Pane with Dust Writing ===== -->
       <article class="history-item">
         <img
           src="../images/collections/window_pane_dust.jpg"
@@ -1218,33 +1215,33 @@
           </p>
 
           <p>
-            In curatorial interpretation, the<em>Window Pane with Dust Writing</em>
-            stands as a dialogue betweenpresence and erasure. It records an act of remembering performed on
-            a surface designed for transparency—an inscription made visible only
-            because of neglect. The anthropologist reads it as urban elegy: a
-            plea written to no one in particular, preserved only because it was
-            never cleaned away.
+            In curatorial interpretation, the<em
+              >Window Pane with Dust Writing</em
+            >
+            stands as a dialogue betweenpresence and erasure. It records an act
+            of remembering performed on a surface designed for transparency—an
+            inscription made visible only because of neglect. The anthropologist
+            reads it as urban elegy: a plea written to no one in particular,
+            preserved only because it was never cleaned away.
           </p>
 
           <h4>Comparative Note</h4>
           <p>
-            Comparable dust inscriptions have been
-            documented in post-demolition urban sites worldwide, though few
-            retain such legible human gesture.
+            Comparable dust inscriptions have been documented in post-demolition
+            urban sites worldwide, though few retain such legible human gesture.
           </p>
 
-<h4>Cautionary Note on Interpretation</h4>
-<p class="caution-note">
-  Interpretations are derived from material and contextual analysis within the Vanished Block excavation. 
-  Apparent personal or narrative connections remain speculative and should not be considered definitive without corroborating documentation.
-</p>
+          <h4>Cautionary Note on Interpretation</h4>
+          <p class="caution-note">
+            Interpretations are derived from material and contextual analysis
+            within the Vanished Block excavation. Apparent personal or narrative
+            connections remain speculative and should not be considered
+            definitive without corroborating documentation.
+          </p>
 
           <h4>On Display Courtesy of</h4>
-          <p>
-            The Museum of Forgotten
-            Photographs, Urban Memory Collection.
-          </p>
-          <hr>
+          <p>The Museum of Forgotten Photographs, Urban Memory Collection.</p>
+          <hr />
         </div>
       </article>
 
@@ -1260,7 +1257,6 @@
       style="display: none"
       role="dialog"
       aria-modal="true"
-      aria-labelledby="modal-title"
     >
       <div class="modal-content">
         <button class="close-modal" aria-label="Close">x</button>
