--- a/html/collections.html
+++ b/html/collections.html
@@ -1269,10 +1269,16 @@
     <footer>
       <p>This is a fictitious website created purely for academic purposes.</p>
       <p>
-        <strong>AI-Generated Content Notice:</strong><br />
-        The images and metadata descriptions in this gallery were generated
-        using AI under human direction, then curated, reviewed, and edited by
-        Kelly Daniel before publication.
+        <strong>AI + Human Collaboration Notice:</strong><br />
+        All <em>souvenir concepts</em> were generated with
+        <em>AI inspiration</em> drawn from the Museum’s Collections and curated,
+        edited, and verified by a human. Written content was conceived by the
+        museum’s creator and refined with
+        <em>AI assistance</em> (<em>ChatGPT</em>). Visual materials include
+        images created with <em>Bing AI Creations</em> and
+        <em>Adobe Firefly</em>. Any <em>Creative Commons</em> or
+        <em>public-domain images</em>
+        are credited in the site’s image directory.
       </p>
     </footer>
 
