--- a/index.html
+++ b/index.html
@@ -154,10 +154,16 @@
     <footer>
       <p>This is a fictitious website created purely for academic purposes.</p>
       <p>
-        This site was conceived by a human. The content on this site was created
-        by a human and curated by AI. The images were created by AI and curated,
-        edited, reviewed, verified, validated, and augmented by a human,
-        although AI is a much better typist than I.
+        <strong>AI + Human Collaboration Notice:</strong><br />
+        All <em>souvenir concepts</em> were generated with
+        <em>AI inspiration</em> drawn from the Museum’s Collections and curated,
+        edited, and verified by a human. Written content was conceived by the
+        museum’s creator and refined with
+        <em>AI assistance</em> (<em>ChatGPT</em>). Visual materials include
+        images created with <em>Bing AI Creations</em> and
+        <em>Adobe Firefly</em>. Any <em>Creative Commons</em> or
+        <em>public-domain images</em>
+        are credited in the site’s image directory.
       </p>
     </footer>
   </body>
